Added project page

--- a/index.html
+++ b/index.html
@@ -501,36 +501,79 @@
         </div>
       </section>
       <!-- SECTION ABOUT -->
-      <section class="about" id="about">
-        <div class="about-image">
-          <h5>MINIMAL</h5>
-          <img src="" alt="" />
-        </div>
-        <div class="about-text flex" id="work">
-          <h2>Elena Joy</h2>
-          <div class="about-life">
-            <h3>My Life</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
-              consectetur asperiores harum dolore nihil fuga?
-            </p>
+      <section class="about" id="work">
+        <div class="my-works">
+          <div class="my-work">
+            <h1>My Work:</h1>
+            <p>Some of my projects...</p>
           </div>
-          <div class="about-work">
-            <h3>My Work</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
-              consectetur asperiores harum dolore nihil fuga?
-            </p>
-          </div>
-          <div class="about-contact">
-            <h3>Get in touch</h3>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Voluptas, maxime reprehenderit. Assumenda necessitatibus id
-              consectetur asperiores harum dolore nihil fuga?
-            </p>
+          <div class="items">
+            <div class="item">
+              <div class="item-image">
+                <img src="/img-projects/item1.png" alt="" />
+              </div>
+              <div class="item-text">
+                <div class="item-text-wrap">
+                  <p class="item-text-category">Design</p>
+                  <h2 class="item-text-title">Great Gradients</h2>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-image">
+                <img src="/img-projects/item2.png" alt="" />
+              </div>
+              <div class="item-text">
+                <div class="item-text-wrap">
+                  <p class="item-text-category">UI/UX</p>
+                  <h2 class="item-text-title">World Experience</h2>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-image">
+                <img src="/img-projects/item3.png" alt="" />
+              </div>
+              <div class="item-text">
+                <div class="item-text-wrap">
+                  <p class="item-text-category">Photography & Design</p>
+                  <h2 class="item-text-title">Vanishing</h2>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-image">
+                <img src="/img-projects/item4.png" alt="" />
+              </div>
+              <div class="item-text">
+                <div class="item-text-wrap">
+                  <p class="item-text-category">Design</p>
+                  <h2 class="item-text-title">Gap INC</h2>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-image">
+                <img src="/img-projects/item5.png" alt="" />
+              </div>
+              <div class="item-text">
+                <div class="item-text-wrap">
+                  <p class="item-text-category">Mobile UI Design</p>
+                  <h2 class="item-text-title">Face THe Experience</h2>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-image">
+                <img src="/img-projects/item6.png" alt="" />
+              </div>
+              <div class="item-text">
+                <div class="item-text-wrap">
+                  <p class="item-text-category">Design Concept</p>
+                  <h2 class="item-text-title">Bezier Curves</h2>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
